plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.143'
    id 'idea'
}

version = mod_version
group = mod_group_id

base { archivesName = mod_id }
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

sourceSets.main.resources { srcDir 'src/generated/resources' }

neoForge {
    version = project.neo_version
    runs {
        client { client() }
        server { server(); programArgument '--nogui' }
        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
        }
        configureEach { logLevel = org.slf4j.event.Level.INFO }
    }
    mods { "${mod_id}" { sourceSet sourceSets.main } }
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version: neo_version,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

var generatedStaffResources = layout.buildDirectory.dir('generated/resources/staffTextures')
var generateStaffTextures = tasks.register('generateStaffTextures') {
    var catalog = file('src/main/staff-textures.json')
    inputs.file catalog
    outputs.dir generatedStaffResources
    doLast {
        var root = generatedStaffResources.get().asFile
        delete root
        var target = new File(root, 'assets/arcanecircle/textures/item')
        target.mkdirs()
        var textures = new groovy.json.JsonSlurper().parse(catalog) as Map
        textures.each { id, encoded ->
            new File(target, "${id}.png").bytes = java.util.Base64.getDecoder().decode(encoded as String)
        }
    }
}

var generatedSpellbookResources = layout.buildDirectory.dir('generated/resources/spellbooks')
var generateSpellbookResources = tasks.register('generateSpellbookResources') {
    var catalog = file('src/main/spellbooks.json')
    inputs.file catalog
    outputs.dir generatedSpellbookResources
    doLast {
        var root = generatedSpellbookResources.get().asFile
        delete root
        var entries = new groovy.json.JsonSlurper().parse(catalog) as List
        def writeJson = { File target, Object value ->
            target.parentFile.mkdirs()
            target.setText(groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(value)) + '\n', 'UTF-8')
        }

        writeJson(new File(root, 'assets/arcanecircle/items/beginner_grimoire.json'), [
                model: [type: 'minecraft:model', model: 'minecraft:item/written_book']
        ])
        entries.each { entry ->
            String itemId = "spellbook_${entry.id}"
            writeJson(new File(root, "assets/arcanecircle/items/${itemId}.json"), [
                    model: [type: 'minecraft:model', model: 'minecraft:item/enchanted_book']
            ])
        }
    }
}

sourceSets.main.resources.srcDir generateModMetadata
sourceSets.main.resources.srcDir generatedStaffResources
sourceSets.main.resources.srcDir generatedSpellbookResources
tasks.named('processResources').configure {
    dependsOn generateStaffTextures
    dependsOn generateSpellbookResources
}
neoForge.ideSyncTask generateModMetadata
neoForge.ideSyncTask generateStaffTextures
neoForge.ideSyncTask generateSpellbookResources

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

jar {
    manifest {
        attributes(
                'Specification-Title': mod_name,
                'Specification-Version': mod_version,
                'Implementation-Title': mod_name,
                'Implementation-Version': mod_version,
                'Automatic-Module-Name': mod_group_id
        )
    }
}

idea { module { downloadSources = true; downloadJavadoc = true } }
